--- a/authors.html
+++ b/authors.html
@@ -73,7 +73,7 @@
       </button>
       <span class="navbar-brand">
         <a class="navbar-link" href="index.html">cloudos</a>
-        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.01</span>
+        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.2.0</span>
       </span>
     </div>
 
@@ -118,6 +118,10 @@
     <ul class="list-unstyled">
       <li>
         <p><strong>Sangram Keshari Sahu</strong>. Author, maintainer. 
+        </p>
+      </li>
+      <li>
+        <p><strong>Lifebit Biotech Ltd.</strong>. Copyright holder. 
         </p>
       </li>
     </ul>
